- allow non-integer degrees of freedom for Student's t in cdf(), invcdf()
  and randgen()
- allow use of an (optional) "mask" argument with the panel statistics
  functions pmean() and friends
- list arguments to functions: allow use of anonymous lists
- extend the invcdf() function to the gamma and std. GED distributions
- GUI script editor: add Cut and Redo toolbar buttons, and also a
  Stop button to interrupt script execution
- GUI session Notes: add option to pop up the notes on opening a
  session file
- build with SSE2 enabled: ensure that the C compiler SSE2 option is
  not wiped out if the user (re-)specifies CFLAGS when doing "make"
- Defining lists: document the wildcard operator, *, and add an
  ellipsis operator (two dots).
- VARs: (re-)enable HAC standard errors via a new option, --robust-hac
- "var" command with --lagselect option: make the table of information
  criteria available as $test
- "omit" command: add a --test-only option to prevent the reduced model
  from being saved as "last model"
- "add" command: add an --lm option to do an LM test, in which case the
  last model is not replaced by the augmented version
- "makepkg" command: add options to produce an XML index entry and a
  file of translatable strings suitable for use with gettext
- "freq" command: add facility to specify the number of bins, or the
  location and width of the bins
- "tsls" command: add a --no-tests option
- Add facility for inspecting the list of gretl addons, under the GUI
  Help menu
- Download of textbook data-file packages: use sourceforge for better
  reliability
- Graphing ("gnuplot" command and GUI): generalize the option of
  separation using a binary dummy to allow use of discrete variables
- "boxplot" command: add --factorized and --panel options; also
  enhance the boxplot options available via the GUI
- "arima" command (native exact ML variant): add a --hessian option to
  enforce computation of standard errors using the Hessian; if this